--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ google_scholar: https://scholar.google.com/citations?user=nXPJqJ4AAAAJ&hl=en
 cv_link: assets/files/curriculum_vitae.pdf
 #github_link: https://github.com/
 linkedin: https://www.linkedin.com/in/sairamrebbapragada/
-#twitter: https://twitter.com/
+mail: sairamrebbapragada29@gmail.com
+# twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
@@ -26,7 +27,7 @@ favicon_dark: ./assets/img/favicon-dark.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
-enable_footnote: true
+enable_footnote: false
 
 # Google Analytics ID
 # Please remove this if you don't use Google Analytics
