--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=nXPJqJ4AAAAJ&hl=en
-cv_link: assets/files/Sairam_Resume_M23.pdf
+cv_link: assets/files/Sairam_CV.pdf
 #github_link: https://github.com/
 linkedin: https://www.linkedin.com/in/sairamrebbapragada/
 mail: sairamrebbapragada29@gmail.com
